--- a/06.DataTpeAndIntraction.md
+++ b/06.DataTpeAndIntraction.md
@@ -1,7 +1,6 @@
-
 # 📊 JavaScript Data Types - Explained Clearly
 
-In JavaScript, data types define the kind of data a variable can hold. Understanding them is fundamental to writing correct and optimized code.
+In JavaScript, data types define the kind of data a variable can hold. Understanding them is essential for building reliable and bug-free applications.
 
 ---
 
@@ -16,7 +15,7 @@ In JavaScript, data types define the kind of data a variable can hold. Understan
 | `null`         | Primitive    | `null`             | ❌      |
 | `Symbol`       | Primitive    | `Symbol("id")`     | ❌      |
 | `BigInt`       | Primitive    | `1234567890123n`   | ❌      |
-| `Object`       | Reference    | `{name: "John"}`   | ✅      |
+| `Object`       | Reference    | `{ name: "John" }` | ✅      |
 | `Array`        | Reference    | `[1, 2, 3]`        | ✅      |
 | `Function`     | Reference    | `function() {}`    | ✅      |
 
@@ -24,108 +23,123 @@ In JavaScript, data types define the kind of data a variable can hold. Understan
 
 ## 🧠 Primitive Types – Stored by Value
 
-### ✅ Example:
 ```js
 let a = "Hello";
 let b = a;
 b = "World";
-console.log(a); // Hello
-````
 
-📌 Each variable holds its own copy. Changing `b` doesn’t affect `a`.
+console.log(a); // Hello
+```
+
+✅ Each variable holds its own independent copy.
 
 ---
 
 ## 🧠 Reference Types – Stored by Reference
 
-### ✅ Example:
-
 ```js
 let user = { name: "Alice" };
 let admin = user;
 admin.name = "Bob";
+
 console.log(user.name); // Bob
 ```
 
-📌 `admin` and `user` point to the same object in memory.
+❗ `user` and `admin` both refer to the **same object**.
 
 ---
 
-## 📈 Mermaid Diagram - Reference Copy
+## 📈 Mermaid Diagram – Reference Sharing
 
 ```mermaid
 graph TD
-    A[let user = { name: "John" }] -->|assign reference| B[let admin = user]
-    B -->|change name| C[name = "Pete"]
-    C -->|seen by| A
+    A[Original user object]
+    B[admin variable]
+    A -->|reference| B
+    B -->|modify name| A
 ```
 
 ---
 
-## 🔄 Deep Clone vs Shallow Clone
+## 🔄 Cloning Objects
 
-### 🔹 Shallow Clone (Same reference for nested objects):
+### 🔹 Shallow Clone Example
 
 ```js
-let user = { name: "John", details: { city: "NY" } };
+let user = {
+  name: "John",
+  details: { city: "NY" }
+};
+
 let clone = Object.assign({}, user);
 clone.details.city = "LA";
+
 console.log(user.details.city); // LA ❌
 ```
 
-### 🔹 Deep Clone (Separate references):
+### 🔹 Deep Clone Example
 
 ```js
-let user = { name: "John", details: { city: "NY" } };
+let user = {
+  name: "John",
+  details: { city: "NY" }
+};
+
 let clone = structuredClone(user);
 clone.details.city = "LA";
+
 console.log(user.details.city); // NY ✅
 ```
 
 ---
 
-## 📈 Mermaid - Deep vs Shallow Clone
+## 📈 Mermaid Diagram – Shallow vs Deep Clone
 
 ```mermaid
 graph TD
-    A[Original: user] --> B{name: "John"}
-    A --> C[details: {city: "NY"}]
-    D[Shallow Clone] --> B
-    D --> C
-    E[Deep Clone] --> F{name: "John"}
-    E --> G[details: {city: "NY"}]
+    User[Original_Object]
+    Details[Details_City_NY]
+    Shallow[Shallow_Clone]
+    Deep[Deep_Clone]
+    DeepDetails[New_Details_City_NY]
+
+    User --> Details
+    Shallow --> Details
+    Deep --> DeepDetails
+
+
 ```
 
 ---
 
-## ✅ Const with Objects
+## ✅ Const and Object Mutability
 
 ```js
 const user = { name: "John" };
 user.name = "Pete"; // ✅ allowed
-user = {};          // ❌ error
+
+user = {}; // ❌ Error: Assignment to constant variable
 ```
 
-📌 `const` prevents reassignment, but internal properties are still mutable.
+📌 `const` prevents reassignment, but internal object values can still change.
 
 ---
 
 ## 🛠️ Real Life Analogy
 
-Imagine a TV remote (variable) that controls a TV (object). If you give the remote to someone else (copy the reference), they can also change the channel (mutate the object).
+Imagine a TV remote (variable) that controls a TV (object).  
+If you give the remote to someone else (copy the reference), they can also change the channel (mutate the object).
 
 ---
 
 ## 🏁 Summary
 
-* Primitives are copied by value 🧾
-* Objects are copied by reference 🗂️
-* Use `structuredClone()` or libraries like `lodash` for deep copying
-* `const` objects are still mutable inside
+* ✅ **Primitives** are copied **by value**
+* ✅ **Objects** are copied **by reference**
+* ⚠️ Use `structuredClone()` or libraries like `lodash` for deep cloning
+* 📌 `const` on an object means the reference can’t change, not the contents
 
-
-
-
+---
 
 # 🧭 Browser Interaction Methods in JavaScript
 
@@ -135,26 +149,22 @@ JavaScript offers **three built-in functions** to interact directly with users v
 
 ## 🔔 1. `alert()`
 
-- Displays a **simple modal message**.
-- Blocks the rest of the page until the user presses “OK”.
-- Does **not return any value**.
+- Displays a **simple modal message**
+- Blocks page execution until the user presses “OK”
+- Returns `undefined`
 
 ### ✅ Example:
 
 ```js
 alert("Welcome to our site!");
-````
-
-* Used for **notifications**, warnings, or quick feedback.
-* Example use case: Form successfully submitted.
+```
 
 ---
 
 ## ✍️ 2. `prompt()`
 
-* Displays a modal dialog asking the user to **input text**.
-* Returns the entered string.
-* If **Cancel** is clicked or **Esc** is pressed, it returns `null`.
+- Asks the user to **input text**
+- Returns the entered string or `null` if canceled
 
 ### ✅ Example:
 
@@ -163,17 +173,12 @@ let userName = prompt("What's your name?", "Guest");
 alert(`Hello, ${userName}`);
 ```
 
-### 🧠 Tip:
-
-You can provide a second argument to `prompt()` as a **default input** value.
-
 ---
 
 ## ✅ 3. `confirm()`
 
-* Asks the user to **confirm an action**.
-* Shows “OK” and “Cancel” buttons.
-* Returns `true` if the user clicks OK, `false` otherwise.
+- Asks the user to **confirm an action**
+- Returns `true` if OK is clicked, `false` otherwise
 
 ### ✅ Example:
 
@@ -200,7 +205,7 @@ All three methods are **modal**:
 ## ⚠️ Limitations
 
 | Limitation             | Description                                                      |
-| ---------------------- | ---------------------------------------------------------------- |
+|------------------------|------------------------------------------------------------------|
 | Layout/Styling Control | You **cannot customize** how the modal looks or where it appears |
 | User Experience        | Modals can be **disruptive** to users                            |
 | Modern Alternatives    | Use custom modals (e.g., **SweetAlert2**, **Bootstrap modals**)  |
@@ -210,7 +215,7 @@ All three methods are **modal**:
 ## 📌 Summary Table
 
 | Function    | Purpose             | Return Value       | Accepts Input |
-| ----------- | ------------------- | ------------------ | ------------- |
+|-------------|---------------------|--------------------|----------------|
 | `alert()`   | Display a message   | `undefined`        | ❌             |
 | `prompt()`  | Get text input      | `string` or `null` | ✅             |
 | `confirm()` | Yes/No confirmation | `true` or `false`  | ✅             |
@@ -220,12 +225,8 @@ All three methods are **modal**:
 ## 🔄 Real-Life Use Cases
 
 | Function    | Example Use Case                                        |
-| ----------- | ------------------------------------------------------- |
+|-------------|---------------------------------------------------------|
 | `alert()`   | Notify user of a successful form submission             |
 | `prompt()`  | Ask for a name before starting a chat or quiz           |
 | `confirm()` | Confirm deletion of data or navigation away from a page |
-
----
-
-
 
