--- a/22.Constructor.md
+++ b/22.Constructor.md
@@ -1,4 +1,3 @@
-
 # 🏗️ JavaScript Constructor Functions and the `new` Operator
 
 ## 📘 Overview
@@ -7,7 +6,7 @@ Constructor functions and the `new` operator allow us to efficiently create mult
 
 ---
 
-## 🧰 What Is a Constructor Function?
+## 🧠 What Is a Constructor Function?
 
 A **constructor function** is a regular function used to **create and initialize** objects.
 
@@ -26,7 +25,7 @@ let user = new User("Jack");
 
 console.log(user.name);    // Jack
 console.log(user.isAdmin); // false
-````
+```
 
 ---
 
@@ -96,9 +95,9 @@ console.log(john.name); // John
 
 ---
 
-## 🧭 Constructor Return Behavior
+## 🚡 Constructor Return Behavior
 
-### 🎁 If `return` returns an object — it replaces `this`:
+### 🏰 If `return` returns an object — it replaces `this`:
 
 ```js
 function BigUser() {
@@ -122,7 +121,7 @@ console.log(new SmallUser().name); // John
 
 ---
 
-## 📝 Parentheses with `new`
+## 📍 Parentheses with `new`
 
 Valid but not recommended:
 
@@ -149,7 +148,6 @@ john.sayHi(); // My name is: John
 ```
 
 ### 👇 Resulting object:
-
 ```js
 {
   name: "John",
@@ -159,26 +157,25 @@ john.sayHi(); // My name is: John
 
 ---
 
-## 🧠 Real-World Analogy
+## 🧐 Real-World Analogy
 
 A **constructor function** is like a mold in a factory:
-
-* 🏭 The mold = constructor function.
-* 🧁 Each product made = object instance.
-* `new` = the machine pressing the mold to make a product.
+- 🏠 The mold = constructor function.
+- 🢁 Each product made = object instance.
+- `new` = the machine pressing the mold to make a product.
 
 ---
 
 ## ✅ Summary Table
 
-| Concept                   | Description                                                      |
-| ------------------------- | ---------------------------------------------------------------- |
-| Constructor Function      | Function used to create object templates                         |
-| `new` Operator            | Automates creation and initialization of a new object            |
-| `new.target`              | Detects if a function was called with `new`                      |
-| Return from Constructor   | Returning object replaces `this`, returning primitive is ignored |
-| One-time `new function()` | Used for single complex object creation                          |
-| Methods in Constructors   | Define per-object functions during creation                      |
+| Concept                    | Description                                                       |
+|----------------------------|-------------------------------------------------------------------|
+| Constructor Function       | Function used to create object templates                         |
+| `new` Operator             | Automates creation and initialization of a new object             |
+| `new.target`               | Detects if a function was called with `new`                      |
+| Return from Constructor    | Returning object replaces `this`, returning primitive is ignored |
+| One-time `new function()`  | Used for single complex object creation                           |
+| Methods in Constructors    | Define per-object functions during creation                       |
 
 ---
 
@@ -186,6 +183,73 @@ A **constructor function** is like a mold in a factory:
 
 Explore `class` syntax — a more structured and modern way to do what constructors do (and much more).
 
+---
+
+## ❓ Optional Chaining `?.`
+
+### ✨ A Recent Addition
+Optional chaining `?.` is a safe way to access nested object properties, even if an intermediate property doesn’t exist.
+
+### ❌ The “Non-Existing Property” Problem
+```js
+let user = {}; // a user without "address" property
+alert(user.address.street); // Error!
 ```
 
+### ✅ Workaround with Conditional Operator
+```js
+let user = {};
+alert(user.address ? user.address.street : undefined);
+```
 
+### 🔄 With Optional Chaining
+```js
+let user = {};
+alert(user?.address?.street); // undefined (no error)
+```
+
+```js
+let html = document.querySelector('.elem')?.innerHTML;
+```
+
+### 🚫 Only Makes One Part Optional
+```js
+let user = null;
+alert(user?.address?.street); // undefined
+```
+
+### 🔇 Don’t Overuse `?.`
+Use it only where absence is expected.
+
+### ⚠️ Variable Must Be Declared
+```js
+user?.address; // ReferenceError if 'user' is not declared
+```
+
+### ⏱ Short-Circuiting
+```js
+let user = null;
+let x = 0;
+user?.sayHi(x++);
+alert(x); // 0
+```
+
+### ⚖️ Other Variants: `?.()`, `?.[]`
+```js
+userAdmin.admin?.();
+userGuest.admin?.();
+```
+```js
+let key = "firstName";
+alert(user1?.[key]);
+alert(user2?.[key]);
+```
+```js
+delete user?.name;
+```
+
+### ❌ Not Usable for Assignment
+```js
+let user = null;
+user?.name = "John"; // Error
+```
