--- a/28.NumberMath.md
+++ b/28.NumberMath.md
@@ -1,215 +1,107 @@
 
+# 📘 JavaScript Numbers & Math Methods 
 
-## 📌 Number Type in JavaScript
+---
 
-All numeric values (integers and decimals) are represented by the `Number` type.
+## 🔢 JavaScript Numbers
+
+JavaScript uses the **Number** type for all numeric values (both integers and floats). There is no separate integer or float type.
+
+### ✅ Number Creation
 
 ```js
-let a = 10;
-let b = 3.14;
-let c = -200;
-let d = 1.5e3; // 1500 in exponential
+let x = 42;          // integer
+let y = 3.14;        // float
+let z = Number("123");  // from string
+let nan = Number("abc"); // NaN (Not a Number)
 ````
 
 ---
 
-## ✅ Number Creation Methods
+## 📏 Number Methods
 
-```js
-Number("123");       // 123
-parseInt("10px");    // 10
-parseFloat("3.14");  // 3.14
-Number("abc");       // NaN
-```
-
-* `Number()`: Converts entire string or value to a number.
-* `parseInt()`: Parses until non-digit character.
-* `parseFloat()`: Parses decimal values.
+| Method             | Description                                               | Example                                                |
+| ------------------ | --------------------------------------------------------- | ------------------------------------------------------ |
+| `toFixed(n)`       | Formats number with **n** digits after decimal            | `3.14159.toFixed(2)` → "3.14"                          |
+| `toPrecision(n)`   | Formats number to **n** total digits                      | `3.14159.toPrecision(3)` → "3.14"                      |
+| `toLocaleString()` | Formats number using **local conventions** (commas, etc.) | `1234567.89.toLocaleString()` → "1,234,567.89" (en-US) |
+| `Number.MAX_VALUE` | Largest representable number                              | `1.7976931348623157e+308`                              |
+| `Number.MIN_VALUE` | Smallest positive number                                  | `5e-324`                                               |
 
 ---
 
-## 🔐 Number Properties
+## 🧠 Rounding in JavaScript
 
-| Property                   | Description                           |
-| -------------------------- | ------------------------------------- |
-| `Number.MAX_VALUE`         | Largest possible number (\~1.79e+308) |
-| `Number.MIN_VALUE`         | Smallest positive number (\~5e-324)   |
-| `Number.NaN`               | Result of invalid number operations   |
-| `Number.POSITIVE_INFINITY` | Positive infinity result              |
-| `Number.NEGATIVE_INFINITY` | Negative infinity result              |
-| `isNaN(value)`             | Checks if value is NaN                |
-| `Number.isFinite(value)`   | Checks if value is finite             |
+### 🔄 Math Rounding Methods
 
-```js
-isNaN("abc");             // true
-Number.isFinite(100);     // true
-Number.isFinite("100");   // false
-```
+| Method          | Description                        | x = 4.4 | x = 4.5 | x = -4.4 | x = -4.5 |
+| --------------- | ---------------------------------- | ------- | ------- | -------- | -------- |
+| `Math.round(x)` | Rounds to nearest integer          | 4       | 5       | -4       | -4       |
+| `Math.floor(x)` | Rounds **down** to nearest integer | 4       | 4       | -5       | -5       |
+| `Math.ceil(x)`  | Rounds **up** to nearest integer   | 5       | 5       | -4       | -4       |
+| `Math.trunc(x)` | Removes decimal part               | 4       | 4       | -4       | -4       |
 
----
-
-## 🧾 Formatting Numbers
-
-### `toFixed(n)`
-
-Returns a string, rounded to `n` **decimal places**.
+### 🔍 Usage Examples
 
 ```js
-let x = 12.3456;
-x.toFixed(2);     // "12.35"
-```
-
-### `toPrecision(n)`
-
-Formats number with `n` **significant digits**.
-
-```js
-let x = 12.3456;
-x.toPrecision(4); // "12.35"
-```
-
-### `toLocaleString(locale, options)`
-
-Converts number to a **localized** string.
-
-```js
-let price = 1234567.89;
-price.toLocaleString('en-US'); // "1,234,567.89"
-price.toLocaleString('hi-IN'); // "12,34,567.89"
+Math.round(4.4);   // 4
+Math.round(4.5);   // 5
+Math.floor(-4.9);  // -5
+Math.ceil(-4.1);   // -4
+Math.trunc(4.9);   // 4
 ```
 
 ---
 
-## ➕ Math Object in JavaScript
+## 📐 Math Object Methods
 
-JavaScript provides a built-in `Math` object with many mathematical constants and functions.
+The `Math` object provides many useful numeric operations:
 
----
+### ✅ Most Used `Math` Methods
 
-## 📌 Commonly Used Math Methods
+| Method              | Description               | Example                   |
+| ------------------- | ------------------------- | ------------------------- |
+| `Math.abs(x)`       | Absolute value            | `Math.abs(-5)` → `5`      |
+| `Math.max(a,b,...)` | Largest value             | `Math.max(3,10,2)` → `10` |
+| `Math.min(a,b,...)` | Smallest value            | `Math.min(3,10,2)` → `2`  |
+| `Math.pow(x, y)`    | x to the power of y       | `Math.pow(2, 3)` → `8`    |
+| `Math.sqrt(x)`      | Square root               | `Math.sqrt(9)` → `3`      |
+| `Math.random()`     | Random number (0 ≤ x < 1) |                           |
+| `Math.floor()`      | Round down                | `Math.floor(3.9)` → `3`   |
+| `Math.ceil()`       | Round up                  | `Math.ceil(3.1)` → `4`    |
+| `Math.round()`      | Round to nearest          | `Math.round(3.5)` → `4`   |
+| `Math.trunc()`      | Remove decimals           | `Math.trunc(3.9)` → `3`   |
 
-### 🔄 Rounding
-
-| Method          | Description                    | Example   |
-| --------------- | ------------------------------ | --------- |
-| `Math.round(x)` | Rounds to nearest integer      | `4.5 → 5` |
-| `Math.floor(x)` | Rounds down to nearest integer | `4.9 → 4` |
-| `Math.ceil(x)`  | Rounds up to nearest integer   | `4.1 → 5` |
-| `Math.trunc(x)` | Removes decimal part           | `4.9 → 4` |
+### 🔧 Example Usage
 
 ```js
-Math.round(7.6);  // 8
-Math.floor(7.9);  // 7
-Math.ceil(7.1);   // 8
-Math.trunc(7.8);  // 7
+Math.max(12, 45, 22);     // 45
+Math.min(-2, 0, 4);       // -2
+Math.pow(2, 4);           // 16
+Math.sqrt(49);            // 7
+Math.abs(-9);             // 9
+Math.random();            // 0.0 to 0.999...
 ```
 
 ---
 
-### 📈 Max/Min
+## ✅ Summary
 
-Returns the largest or smallest number from a list.
-
-```js
-Math.max(3, 7, 1);   // 7
-Math.min(3, 7, 1);   // 1
-```
-
----
-
-### 🔀 Random
-
-Returns a floating number between 0 (inclusive) and 1 (exclusive).
+* JavaScript has a single `Number` type.
+* Use `.toFixed()` and `.toPrecision()` for formatting numbers.
+* Use `Math` methods for rounding, min/max, power, roots, and randomness.
+* Understand rounding behaviors (`round`, `floor`, `ceil`, `trunc`) — especially with negative numbers.
 
 ```js
-Math.random();                    // 0.123...
-Math.floor(Math.random() * 10);   // 0–9 (random int)
+// Final Example
+let num = 5.6789;
+console.log(num.toFixed(2));       // "5.68"
+console.log(num.toPrecision(3));   // "5.68"
+console.log(num.toLocaleString()); // "5.679" (based on locale)
+console.log(Math.round(num));      // 6
+console.log(Math.floor(num));      // 5
+console.log(Math.random());        // random number
 ```
 
----
-
-### 📐 Power & Roots
-
-```js
-Math.pow(2, 4);   // 16 (2^4)
-Math.sqrt(25);    // 5
-Math.cbrt(27);    // 3
 ```
-
----
-
-### ➖ Absolute & Sign
-
-```js
-Math.abs(-20);    // 20
-Math.sign(-7);    // -1
-Math.sign(0);     // 0
-Math.sign(8);     // 1
 ```
-
----
-
-### 📐 Trigonometry
-
-```js
-Math.sin(Math.PI / 2); // 1
-Math.cos(0);           // 1
-Math.tan(Math.PI / 4); // ~1
-```
-
----
-
-### 🧮 Logarithms
-
-```js
-Math.log(10);     // Natural log base e (~2.302)
-Math.log10(100);  // 2
-Math.log2(8);     // 3
-```
-
----
-
-### 🔼 Exponentials
-
-```js
-Math.exp(1);      // e^1 ≈ 2.718
-```
-
----
-
-## 📚 Math Constants
-
-| Constant     | Value            |
-| ------------ | ---------------- |
-| `Math.PI`    | 3.14159...       |
-| `Math.E`     | 2.71828...       |
-| `Math.SQRT2` | √2               |
-| `Math.LN2`   | Natural log of 2 |
-
----
-
-## 🧪 Practical Examples
-
-```js
-let score = 86.6789;
-
-score.toFixed(1);            // "86.7"
-score.toPrecision(3);        // "86.7"
-score.toLocaleString();      // "86.679" (based on locale)
-
-Math.floor(Math.random() * 100); // random int 0–99
-Math.max(1, 3, 5);           // 5
-Math.sqrt(144);              // 12
-Math.pow(5, 3);              // 125
-```
-
----
-
-## 📝 Summary
-
-* JavaScript uses one number type: `Number`, which handles both integers and floats.
-* Use `.toFixed()` for decimal places, `.toPrecision()` for significant digits.
-* `Math` object includes rounding, max/min, random, trig, log, and power functions.
-* Always combine `Math.random()` with `Math.floor()` to generate random integers.
-
-
