--- a/28.NumberMath.md
+++ b/28.NumberMath.md
@@ -1,107 +1,216 @@
+# 📘 JavaScript: Number & Math Methods Notes
 
-# 📘 JavaScript Numbers & Math Methods 
+## 🧮 Number Data Type in JavaScript
 
----
-
-## 🔢 JavaScript Numbers
-
-JavaScript uses the **Number** type for all numeric values (both integers and floats). There is no separate integer or float type.
-
-### ✅ Number Creation
+JavaScript has only one number type: `Number`, which includes both integers and floating-point numbers.
 
 ```js
-let x = 42;          // integer
-let y = 3.14;        // float
-let z = Number("123");  // from string
-let nan = Number("abc"); // NaN (Not a Number)
+let int = 10;
+let float = 10.5;
 ````
 
----
+JavaScript numbers are **64-bit floating point**, based on the IEEE 754 standard.
 
-## 📏 Number Methods
+### Special Numeric Values
 
-| Method             | Description                                               | Example                                                |
-| ------------------ | --------------------------------------------------------- | ------------------------------------------------------ |
-| `toFixed(n)`       | Formats number with **n** digits after decimal            | `3.14159.toFixed(2)` → "3.14"                          |
-| `toPrecision(n)`   | Formats number to **n** total digits                      | `3.14159.toPrecision(3)` → "3.14"                      |
-| `toLocaleString()` | Formats number using **local conventions** (commas, etc.) | `1234567.89.toLocaleString()` → "1,234,567.89" (en-US) |
-| `Number.MAX_VALUE` | Largest representable number                              | `1.7976931348623157e+308`                              |
-| `Number.MIN_VALUE` | Smallest positive number                                  | `5e-324`                                               |
-
----
-
-## 🧠 Rounding in JavaScript
-
-### 🔄 Math Rounding Methods
-
-| Method          | Description                        | x = 4.4 | x = 4.5 | x = -4.4 | x = -4.5 |
-| --------------- | ---------------------------------- | ------- | ------- | -------- | -------- |
-| `Math.round(x)` | Rounds to nearest integer          | 4       | 5       | -4       | -4       |
-| `Math.floor(x)` | Rounds **down** to nearest integer | 4       | 4       | -5       | -5       |
-| `Math.ceil(x)`  | Rounds **up** to nearest integer   | 5       | 5       | -4       | -4       |
-| `Math.trunc(x)` | Removes decimal part               | 4       | 4       | -4       | -4       |
-
-### 🔍 Usage Examples
+| Value       | Description               |
+| ----------- | ------------------------- |
+| `Infinity`  | Result of division by 0   |
+| `-Infinity` | Negative infinity         |
+| `NaN`       | Not a Number (e.g. `0/0`) |
 
 ```js
-Math.round(4.4);   // 4
+console.log(1 / 0);     // Infinity
+console.log(-1 / 0);    // -Infinity
+console.log("abc" * 2); // NaN
+```
+
+---
+
+## 🔢 Common Number Methods
+
+### `toFixed(digits)`
+
+* Formats number with fixed number of decimals.
+* Returns a **string**.
+
+```js
+let n = 4.567;
+console.log(n.toFixed(2)); // "4.57"
+```
+
+### `toPrecision(digits)`
+
+* Formats number to a specified total number of digits.
+
+```js
+let n = 123.456;
+console.log(n.toPrecision(4)); // "123.5"
+console.log(n.toPrecision(2)); // "1.2e+2"
+```
+
+### `toLocaleString()`
+
+* Converts number into a string, using local number formatting.
+
+```js
+let n = 1000000;
+console.log(n.toLocaleString()); // "1,000,000" in en-US
+```
+
+### Number Constants
+
+```js
+Number.MAX_VALUE
+Number.MIN_VALUE
+Number.POSITIVE_INFINITY
+Number.NEGATIVE_INFINITY
+Number.NaN
+```
+
+---
+
+## 🧠 Math Object in JavaScript
+
+The `Math` object provides many useful methods for mathematical operations. It is **not a constructor**, so you use methods like `Math.round(x)`.
+
+---
+
+## 🟡 Rounding Methods
+
+| Method          | Description                    | Examples               |
+| --------------- | ------------------------------ | ---------------------- |
+| `Math.round(x)` | Rounds to nearest integer      | `4.5 → 5`, `4.4 → 4`   |
+| `Math.floor(x)` | Rounds **down** to nearest int | `4.9 → 4`, `-4.9 → -5` |
+| `Math.ceil(x)`  | Rounds **up** to nearest int   | `4.1 → 5`, `-4.1 → -4` |
+| `Math.trunc(x)` | Removes decimal part           | `4.9 → 4`, `-4.9 → -4` |
+
+### 🔍 Behavior Examples
+
+```js
 Math.round(4.5);   // 5
+Math.round(4.4);   // 4
+Math.floor(4.9);   // 4
 Math.floor(-4.9);  // -5
+Math.ceil(4.1);    // 5
 Math.ceil(-4.1);   // -4
 Math.trunc(4.9);   // 4
+Math.trunc(-4.9);  // -4
 ```
 
 ---
 
-## 📐 Math Object Methods
+## 🧠 Math Methods (Most Used)
 
-The `Math` object provides many useful numeric operations:
+### `Math.max()`, `Math.min()`
 
-### ✅ Most Used `Math` Methods
-
-| Method              | Description               | Example                   |
-| ------------------- | ------------------------- | ------------------------- |
-| `Math.abs(x)`       | Absolute value            | `Math.abs(-5)` → `5`      |
-| `Math.max(a,b,...)` | Largest value             | `Math.max(3,10,2)` → `10` |
-| `Math.min(a,b,...)` | Smallest value            | `Math.min(3,10,2)` → `2`  |
-| `Math.pow(x, y)`    | x to the power of y       | `Math.pow(2, 3)` → `8`    |
-| `Math.sqrt(x)`      | Square root               | `Math.sqrt(9)` → `3`      |
-| `Math.random()`     | Random number (0 ≤ x < 1) |                           |
-| `Math.floor()`      | Round down                | `Math.floor(3.9)` → `3`   |
-| `Math.ceil()`       | Round up                  | `Math.ceil(3.1)` → `4`    |
-| `Math.round()`      | Round to nearest          | `Math.round(3.5)` → `4`   |
-| `Math.trunc()`      | Remove decimals           | `Math.trunc(3.9)` → `3`   |
-
-### 🔧 Example Usage
+Find the highest or lowest value.
 
 ```js
-Math.max(12, 45, 22);     // 45
-Math.min(-2, 0, 4);       // -2
-Math.pow(2, 4);           // 16
-Math.sqrt(49);            // 7
-Math.abs(-9);             // 9
-Math.random();            // 0.0 to 0.999...
+Math.max(1, 3, 9); // 9
+Math.min(1, 3, 9); // 1
+```
+
+### `Math.sqrt(x)` – Square Root
+
+```js
+Math.sqrt(16); // 4
+```
+
+### `Math.pow(base, exponent)` – Power
+
+```js
+Math.pow(2, 3); // 8
+```
+
+### `Math.random()` – Random number between 0 and 1
+
+```js
+Math.random(); // e.g. 0.7353
+```
+
+#### 🎲 Generate random integer between 1–10
+
+```js
+Math.floor(Math.random() * 10) + 1;
+```
+
+### `Math.abs(x)` – Absolute value
+
+```js
+Math.abs(-7); // 7
+```
+
+### `Math.sign(x)` – Sign of number
+
+```js
+Math.sign(-5); // -1
+Math.sign(0);  // 0
+Math.sign(9);  // 1
+```
+
+### `Math.cbrt(x)` – Cube root
+
+```js
+Math.cbrt(27); // 3
+```
+
+### `Math.log(x)` and `Math.log10(x)`
+
+```js
+Math.log(Math.E);     // 1
+Math.log10(100);      // 2
 ```
 
 ---
 
-## ✅ Summary
+## 🧪 Edge Behavior: Rounding Methods
 
-* JavaScript has a single `Number` type.
-* Use `.toFixed()` and `.toPrecision()` for formatting numbers.
-* Use `Math` methods for rounding, min/max, power, roots, and randomness.
-* Understand rounding behaviors (`round`, `floor`, `ceil`, `trunc`) — especially with negative numbers.
+| Method       | Value | Result |
+| ------------ | ----- | ------ |
+| `Math.round` | 4.5   | 5      |
+|              | 4.49  | 4      |
+| `Math.floor` | -4.9  | -5     |
+| `Math.ceil`  | -4.1  | -4     |
+| `Math.trunc` | -4.9  | -4     |
+
+---
+
+## 🧠 Summary
+
+| Function             | Purpose                   |
+| -------------------- | ------------------------- |
+| `toFixed()`          | Format to fixed decimals  |
+| `toPrecision()`      | Format to total digits    |
+| `toLocaleString()`   | Localized number string   |
+| `Math.round()`       | Round to nearest integer  |
+| `Math.floor()`       | Round down                |
+| `Math.ceil()`        | Round up                  |
+| `Math.trunc()`       | Remove decimal            |
+| `Math.max()`/`min()` | Get largest/smallest      |
+| `Math.random()`      | Generate random float 0–1 |
+| `Math.pow()`         | Power                     |
+| `Math.sqrt()`        | Square root               |
+| `Math.abs()`         | Absolute value            |
+
+---
+
+## 🔁 Convert Numbers
 
 ```js
-// Final Example
-let num = 5.6789;
-console.log(num.toFixed(2));       // "5.68"
-console.log(num.toPrecision(3));   // "5.68"
-console.log(num.toLocaleString()); // "5.679" (based on locale)
-console.log(Math.round(num));      // 6
-console.log(Math.floor(num));      // 5
-console.log(Math.random());        // random number
+parseInt("123");      // 123
+parseFloat("123.45"); // 123.45
+Number("123");        // 123
 ```
 
+---
+
+## ✅ Best Practices
+
+* Use `Number()` to convert values to numeric type.
+* Always check for `NaN` using `Number.isNaN()`.
+
+```js
+Number.isNaN("abc" * 3); // true
 ```
-```
+
